<resources>
    <string name="app_name">MusicApp</string>
    <string name="action_settings">Paramètres</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">Accueil</string>
    <string name="second_fragment_label">Musique</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="Accueil_commande">Bonjour, veuillez lancer une commande</string>
    <string name="music_player">Music player</string>
    <string name="play">Play</string>
    <string name="titre">Titre</string>
    <string name="artiste">Artiste</string>
</resources>